--- a/templates/item/item-feature-sheet.hbs
+++ b/templates/item/item-feature-sheet.hbs
@@ -25,7 +25,7 @@
           <input type="text" name="system.class" value="{{system.class}}" data-dtype="String"/>
           <label class="resource-label">Level</label>
           <input type="text" name="system.level" value="{{system.level}}" data-dtype="String"/>
-          <label class="rollable resource-label">Check Roll</label>
+          <label class="resource-label">Check Roll</label>
           <input type="text" name="system.check" value="{{system.check}}" data-dtype="String"/>
           <label class="resource-label">Target</label>
           <input type="text" name="system.target" value="{{system.target}}" data-dtype="String"/>
