--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -5,7 +5,7 @@
       <h3>Fighting Skills</h3>
     </div>
     <div class="resource-content flexrow flex-group-center">
-      <span class="rollable flexlarge" data-roll="1d20 + @bab + @str.atkMod" data-label="Basic Attack">
+      <span class="rollable flexlarge" data-roll="1d20 + @bab + @str.atkMod" data-roll-type="attack" data-roll-target="" data-label="Unarmed Attack">
         <label for="system.fa.value" class="combat-label">{{localize "HYP3E.fightingAbility"}}</label>
         <i class="fas fa-dice-d20"></i>
       </span>
@@ -29,7 +29,7 @@
       <input type="text" name="system.hp.value" value="{{system.hp.value}}" data-dtype="Number"/>
       /
       <input type="text" name="system.hp.max" value="{{system.hp.max}}" data-dtype="Number"/>
-      <span class="combat-label rollable" data-roll="{{system.hd}}+{{system.attributes.con.hpMod}}" data-label="Hit Die + CN mod">
+      <span class="combat-label rollable" data-roll="{{system.hd}}+{{system.attributes.con.hpMod}}" data-roll-type="basic" data-roll-target="" data-label="Hit Die + CN mod">
         <label for="system.hd">Hit Die</label> <i class="fas fa-dice-d6"></i>
       </span>
       <input type="text" name="system.hd" value="{{system.hd}}" data-dtype="String"/>
@@ -60,35 +60,35 @@
 </div>
 <div class="saves-block flexrow flex-between">
   <div class="combat-block flexrow flex-group-center">
-    <span class="rollable" data-roll-type="save" data-roll="1d20" data-label="Death Save">
+    <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.death.value}}" data-label="Death Save">
       <label for="system.saves.death.value" class="combat-label">{{localize "HYP3E.saves.death.abbrev"}}</label>
       <i class="fas fa-dice-d20"></i>
       </span>
     <input type="text" name="system.saves.death.value" value="{{system.saves.death.value}}"/>
   </div>
   <div class="combat-block flexrow flex-group-center">
-    <span class="rollable" data-roll-type="save" data-roll="1d20" data-label="Device Save">
+    <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.device.value}}" data-label="Device Save">
       <label for="system.saves.device.value" class="combat-label">{{localize "HYP3E.saves.device.abbrev"}}</label>
       <i class="fas fa-dice-d20"></i>
     </span>
     <input type="text" name="system.saves.device.value" value="{{system.saves.device.value}}"/>
   </div>
   <div class="combat-block flexrow flex-group-center">
-    <span class="rollable" data-roll-type="save" data-roll="1d20" data-label="Transformation Save">
+    <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.transformation.value}}" data-label="Transformation Save">
       <label for="system.saves.transformation.value" class="combat-label">{{localize "HYP3E.saves.transformation.abbrev"}}</label>
       <i class="fas fa-dice-d20"></i>
     </span>
     <input type="text" name="system.saves.transformation.value" value="{{system.saves.transformation.value}}"/>
   </div>
   <div class="combat-block flexrow flex-group-center">
-    <span class="rollable" data-roll-type="save" data-roll="1d20" data-label="Avoidance Save">
+    <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.avoidance.value}}" data-label="Avoidance Save">
       <label for="system.saves.avoidance.value" class="combat-label">{{localize "HYP3E.saves.avoidance.abbrev"}}</label>
       <i class="fas fa-dice-d20"></i>
     </span>
     <input type="text" name="system.saves.avoidance.value" value="{{system.saves.avoidance.value}}"/>
   </div>
   <div class="combat-block flexrow flex-group-center">
-    <span class="rollable" data-roll-type="save" data-roll="1d20" data-label="Sorcery Save">
+    <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.sorcery.value}}" data-label="Sorcery Save">
       <label for="system.saves.sorcery.value" class="combat-label">{{localize "HYP3E.saves.sorcery.abbrev"}}</label>
       <i class="fas fa-dice-d20"></i>
     </span>
@@ -120,7 +120,7 @@
           <div class="item-image">
             <a class="rollable" data-roll-type="item" data-label="Attack with {{item.name}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
           </div>
-          <h4>{{item.name}}</h4>
+          <a><h4 class="item-drop">{{item.name}}</h4></a>
         </div>
         <div class="item-prop">{{item.system.rof}}</div>
         {{#if item.system.range.short}}
@@ -167,9 +167,9 @@
       <div class="item-header flexrow">
         <div class="item-name">
           <div class="item-image">
-            <a><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
           </div>
-          <h4>{{item.name}}</h4>
+          <a><h4 class="item-drop">{{item.name}}</h4></a>
         </div>
         <div class="item-prop">{{item.system.type}}</div>
         <div class="item-prop">{{item.system.ac}}</div>
