--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -15,9 +15,13 @@
       <div class="item-header flexrow">
         <div class="item-name">
           <div class="item-image">
-            <a {{#if item.system.roll}}class="rollable" data-roll-type="item"{{/if}}><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            {{#if item.system.check}}
+            <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            {{else}}
+            <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+            {{/if}}
           </div>
-          <h4>{{item.name}}</h4>
+          <a><h4 class="item-drop">{{item.name}}</h4></a>
         </div>
         <div class="item-prop">{{item.system.quantity.value}}
           {{#if item.system.quantity.max}}
