--- a/templates/actor/parts/npc-all-items.hbs
+++ b/templates/actor/parts/npc-all-items.hbs
@@ -16,9 +16,13 @@
       <div class="item-header flexrow">
         <div class="item-name">
           <div class="item-image">
-            <a {{#if item.system.roll}}class="rollable" data-roll-type="item" data-label="Attack with {{item.name}}"{{/if}}><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            {{#if item.system.check}}
+            <a class="rollable" data-roll-type="item" data-label="{{item.name}} check"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            {{else}}
+            <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+            {{/if}}
           </div>
-          <h4>{{item.name}}</h4>
+          <a><h4 class="item-drop">{{item.name}}</h4></a>
         </div>
         <div class="item-prop">{{item.system.check}}</div>
         <div class="item-prop">{{item.system.target}}</div>
@@ -53,9 +57,9 @@
       <div class="item-header flexrow">
         <div class="item-name">
           <div class="item-image">
-            <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            <a class="rollable" data-roll-type="item" data-label="Attack with {{item.name}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
           </div>
-          <h4>{{item.name}}</h4>
+          <a><h4 class="item-drop">{{item.name}}</h4></a>
         </div>
         <div class="item-prop">{{item.system.quantity.value}}
           {{#if item.system.quantity.max}}
@@ -81,9 +85,9 @@
       <div class="item-header flexrow">
         <div class="item-name">
           <div class="item-image">
-            <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
           </div>
-          <h4>{{item.name}}</h4>
+          <a><h4 class="item-drop">{{item.name}}</h4></a>
         </div>
         <div class="item-prop">{{item.system.quantity.value}}
           {{#if item.system.quantity.max}}
@@ -109,9 +113,13 @@
       <div class="item-header flexrow">
         <div class="item-name">
           <div class="item-image">
-            <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            {{#if item.system.check}}
+            <a class="rollable" data-roll-type="item" data-label="{{item.name}} check"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+            {{else}}
+            <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+            {{/if}}
           </div>
-          <h4>{{item.name}}</h4>
+          <a><h4 class="item-drop">{{item.name}}</h4></a>
         </div>
         <div class="item-prop">{{item.system.quantity.value}}
           {{#if item.system.quantity.max}}
@@ -156,9 +164,13 @@
         <div class="item-header flexrow">
           <div class="item-name">
             <div class="item-image">
-              <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+              {{#if item.system.attack}}
+              <a class="rollable" data-roll-type="item" data-label="Attack with {{item.name}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+              {{else}}
+              <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+              {{/if}}
             </div>
-            <h4>{{item.name}}</h4>
+            <a><h4 class="item-drop">{{item.name}}</h4></a>
           </div>
           <div class="item-prop">{{item.system.memorized}}</div>
           <div class="item-prop">{{item.system.range}}</div>
