--- a/templates/actor/parts/actor-spells.hbs
+++ b/templates/actor/parts/actor-spells.hbs
@@ -1,7 +1,7 @@
 {{!-- Casting ability --}}
 <div class="spells-block flexrow flex-group-left">
   <div class="casting-ability flexrow flex-group-center">
-    <span class="rollable" data-roll="1d20 + @bcb" data-label="Cast Spell">
+    <span class="rollable" data-roll="1d20 + @bca" data-roll-type="basic" data-label="Casting Ability check">
       <label for="system.ca.value" class="spells-label">{{localize "HYP3E.castingAbility"}}</label> 
       <i class="fas fa-dice-d20"></i>
     </span>
