--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -5,7 +5,7 @@
       <h3>Fighting Skills</h3>
     </div>
     <div class="resource-content flexrow flex-group-center">
-      <span class="rollable flexlarge" data-roll="1d20 + @bab + @str.atkMod" data-roll-type="attack" data-roll-target="" data-label="Unarmed Attack">
+      <span class="rollable flexlarge" data-roll="1d20 + @bfa + @str.atkMod" data-roll-type="attack" data-roll-target="" data-label="Basic melee attack">
         <label for="system.fa.value" class="combat-label">{{localize "HYP3E.fightingAbility"}}</label>
         <i class="fas fa-dice-d20"></i>
       </span>
