--- a/templates/chat/roll-attack.hbs
+++ b/templates/chat/roll-attack.hbs
@@ -1,39 +1,21 @@
-<div class="hyp3e chat-card item-card" data-actor-id="{{data.actor._id}}" data-item-id="{{data.item._id}}"
-    {{#if tokenId}}data-token-id="{{tokenId}}" {{/if}}>
-    <div class="hyp3e chat-block">
-        <div class="flexrow chat-header">
-            <div class="chat-title">
-                <h2>{{title}}</h2>
-            </div>
-            {{#if data.item}}
-            <div class="chat-img" style="background-image:url('{{data.item.img}}')"></div>
-            {{else}}
-            <div class="chat-img" style="background-image:url('{{data.actor.img}}')"></div>
-            {{/if}}
-        </div>
-        {{#if result.victim}}
-        <div class="chat-target">
-            vs {{result.victim}}
-        </div>
-        {{/if}}
-        <div class="blindable" data-blind="{{data.roll.blindroll}}">
-            <div class="chat-details">
-                <div class="roll-result">{{{result.details}}}</div>
-            </div>
-            {{#if rollHyp3e}}<div>{{{rollHyp3e}}}</div>{{/if}}
-            {{#if result.isSuccess}}
-            <div class="chat-details">
-                <div class="roll-result"><b>{{localize 'HYP3E.messages.InflictsDamage'}}</b></div>
-            </div>
-            <div class="damage-roll">{{{rollDamage}}}</div>
-            {{#if data.roll.save}}
-            <div class="card-buttons">
-                <button data-action="save" data-save="{{data.roll.save}}" disabled>
-                    {{lookup config.saves_long data.roll.save}} - {{localize "HYP3E.spells.Save"}}
-                </button>
-            </div>
-            {{/if}}
-            {{/if}}
-        </div>
+<div class="message-content">
+  <div class="dice-roll">
+    <div class="dice-result">
+      <div class="dice-formula">{{formula}}</div>
+      <div class="dice-tooltip">
+        <section class="tooltip-part">
+          <div class="dice">
+            <header class="part-header flexrow">
+              <span class="part-formula">{{dieType}}</span>                
+              <span class="part-total">{{naturalRoll}}</span>
+            </header>
+            <ol class="dice-rolls">
+              <li class="roll die {{dieType}}">{{naturalRoll}}</li>
+            </ol>
+          </div>
+        </section>
+      </div>
+      <h4 class="dice-total">{{rollTotal}}</h4>
     </div>
+  </div>
 </div>
