--- a/templates/actor/parts/actor-abilities.hbs
+++ b/templates/actor/parts/actor-abilities.hbs
@@ -11,7 +11,7 @@
     <div class="abilities flexcol">
       {{#each system.explorationSkills as |skill key|}}
       <div class="ability flexrow flex-group-center">
-        <span class="rollable flex-xlarge align-left" data-roll="d6" data-roll-target="{{skill.value}}" data-roll-type="check" data-label="{{skill.label}}">
+        <span class="rollable flex-xlarge align-left" data-roll="d6" data-roll-target="{{skill.value}}" data-roll-type="check" data-roll-mode="blindroll" data-label="{{skill.label}}">
           <label for="system.explorationSkills.{{key}}.value" class="exploration-label">{{skill.label}}</label>
           <i class="fas fa-dice-d6"></i>
         </span>
