--- a/templates/actor/parts/npc-abilities.hbs
+++ b/templates/actor/parts/npc-abilities.hbs
@@ -17,8 +17,8 @@
       <input type="text" name="system.hd" value="{{system.hd}}" data-dtype="String"/>
     </div>
     <div class="attribute-row flexrow">
-      <label for="system.fa.value" class="combat-label">Fighting Ab</label>
-      <input type="text" name="system.fa.value" value="{{system.fa.value}}" data-dtype="Number" />
+      <label for="system.fa" class="combat-label">Fighting Ab</label>
+      <input type="text" name="system.fa" value="{{system.fa}}" data-dtype="Number" />
     </div>
     <div class="attribute-row flexrow">
       <label for="system.dx" class="combat-label">DX</label>
@@ -33,8 +33,8 @@
       <input type="text" name="system.ac.dr" value="{{system.ac.dr}}" data-dtype="Number" />
     </div>
     <div class="attribute-row flexrow">
-      <label for="system.ca.value" class="combat-label">Casting Ab</label>
-      <input type="text" name="system.ca.value" value="{{system.ca.value}}" data-dtype="Number" />
+      <label for="system.ca" class="combat-label">Casting Ab</label>
+      <input type="text" name="system.ca" value="{{system.ca}}" data-dtype="Number" />
     </div>
     <div class="attribute-row flexrow">
       <label for="system.movement.base.value" class="combat-label">{{localize "HYP3E.movement.base.abbrev"}}</label>
