--- a/templates/actor/parts/npc-all-items.hbs
+++ b/templates/actor/parts/npc-all-items.hbs
@@ -143,7 +143,7 @@
 </ol>
 
 {{!-- Spells appear here --}}
-{{#if system.ca.value}}
+{{#if system.ca}}
 <h3>Spells</h3>
 <ol class="items-list">
   {{#each spells as |spells spellLevel|}}
