--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -5,11 +5,11 @@
       <h3>Fighting Skills</h3>
     </div>
     <div class="resource-content flexrow flex-group-center">
-      <span class="rollable flexlarge" data-roll="1d20 + @bfa + @str.atkMod" data-roll-type="attack" data-roll-target="" data-label="Basic melee attack">
-        <label for="system.fa.value" class="combat-label">{{localize "HYP3E.fightingAbility"}}</label>
+      <span class="rollable flexlarge" data-roll="1d20 + @fa + @str.atkMod" data-roll-type="attack" data-roll-target="" data-label="Basic melee attack">
+        <label for="system.fa" class="combat-label">{{localize "HYP3E.fightingAbility"}}</label>
         <i class="fas fa-dice-d20"></i>
       </span>
-      <input type="text" name="system.fa.value" value="{{system.fa.value}}" data-dtype="Number"/>
+      <input type="text" name="system.fa" value="{{system.fa}}" data-dtype="Number"/>
       <label for="system.unskilled" class="combat-label">Unskilled</label>
       <input type="text" name="system.unskilled" value="{{system.unskilled}}" data-dtype="Number"/>
     </div>
@@ -105,7 +105,7 @@
     <div class="item-prop">Atk Mod</div>
     <div class="item-prop">Dmg Mod</div>
     <div class="item-prop">Damage</div>
-    <div class="item-prop">Equipped</div>
+    {{!-- <div class="item-prop">Equipped</div> --}}
     <!-- <div class="item-formula">Roll Formula</div> -->
     <div class="item-controls">
       <a class="item-control item-create" title="Create weapon" data-type="weapon">
@@ -123,16 +123,18 @@
           <a><h4 class="item-drop">{{item.name}}</h4></a>
         </div>
         <div class="item-prop">{{item.system.rof}}</div>
-        {{#if item.system.range.short}}
-          <div class="item-prop">{{item.system.range.short}}/{{item.system.range.medium}}/{{item.system.range.long}}</div>
-        {{else}}
+        {{#if item.system.melee}}
           <div class="item-prop">{{item.system.wc}}</div>
+        {{else}}
+          <div class="item-prop">{{item.system.range.short}}/{{item.system.range.medium}}/{{item.system.range.long}}</div>
         {{/if}}
         <div class="item-prop">{{numberFormat item.system.atkMod decimals=0 sign=true}}</div>
         <div class="item-prop">{{numberFormat item.system.dmgMod decimals=0 sign=true}}</div>
         <div class="item-prop">{{item.system.damage}}</div>
-        <div class="item-prop"><input name="system.equipped" type="checkbox" {{checked system.equipped}} disabled></div>
+        {{!-- <div></div> --}}
+        {{!-- <div class="item-prop"><input name="system.equipped" type="checkbox" {{checked system.equipped}} disabled></div> --}}
         <div class="item-controls">
+          <a class="item-control item-equip {{#unless item.system.equipped}}item-unequipped{{/unless}}" title='{{localize "HYP3E.item.equip"}}'><i class="fas fa-shirt"></i></a>
           <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
           <a class="item-control item-edit" title="{{localize 'HYP3E.item.edit'}}"><i class="fas fa-edit"></i></a>
           <a class="item-control item-delete" title="{{localize 'HYP3E.item.delete'}}"><i class="fas fa-trash"></i></a>
@@ -155,7 +157,7 @@
     <div class="item-prop">AC</div>
     <div class="item-prop">DR</div>
     <div class="item-prop">MV</div>
-    <div class="item-prop">Equipped</div>
+    {{!-- <div class="item-prop">Equipped</div> --}}
     <div class="item-controls">
       <a class="item-control item-create" title="Create armor" data-type="armor">
         <i class="fas fa-plus"></i> {{localize "HYP3E.armor.add"}}
@@ -175,8 +177,10 @@
         <div class="item-prop">{{item.system.ac}}</div>
         <div class="item-prop">{{item.system.dr}}</div>
         <div class="item-prop">{{item.system.mv}}</div>
-        <div class="item-prop"><input name="system.equipped" type="checkbox" {{checked system.equipped}} disabled></div>
+        {{!-- <div></div> --}}
+        {{!-- <div class="item-prop"><input name="system.equipped" type="checkbox" {{checked system.equipped}} disabled></div> --}}
         <div class="item-controls">
+          <a class="item-control item-equip {{#unless item.system.equipped}}item-unequipped{{/unless}}" title='{{localize "HYP3E.item.equip"}}'><i class="fas fa-shirt"></i></a>
           <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
           <a class="item-control item-edit" title="{{localize 'HYP3E.item.edit'}}"><i class="fas fa-edit"></i></a>
           <a class="item-control item-delete" title="{{localize 'HYP3E.item.delete'}}"><i class="fas fa-trash"></i></a>
