bug fix for monster attacks

--- a/templates/actor/parts/npc-abilities.hbs
+++ b/templates/actor/parts/npc-abilities.hbs
@@ -17,7 +17,7 @@
       <input type="text" name="system.hd" value="{{system.hd}}" data-dtype="String"/>
     </div>
     <div class="attribute-row flexrow">
-      <label for="system.fa" class="combat-label">Fighting Ab</label>
+      <label for="system.fa" class="combat-label">FA</label>
       <input type="text" name="system.fa" value="{{system.fa}}" data-dtype="Number" />
     </div>
     <div class="attribute-row flexrow">
@@ -33,7 +33,7 @@
       <input type="text" name="system.ac.dr" value="{{system.ac.dr}}" data-dtype="Number" />
     </div>
     <div class="attribute-row flexrow">
-      <label for="system.ca" class="combat-label">Casting Ab</label>
+      <label for="system.ca" class="combat-label">CA</label>
       <input type="text" name="system.ca" value="{{system.ca}}" data-dtype="Number" />
     </div>
     <div class="attribute-row flexrow">
