--- a/templates/item/item-item-sheet.hbs
+++ b/templates/item/item-item-sheet.hbs
@@ -28,6 +28,8 @@
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
+
+    {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
       <div class="flexrow">
 
