--- a/templates/item/item-spell-sheet.hbs
+++ b/templates/item/item-spell-sheet.hbs
@@ -29,10 +29,10 @@
 
     {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
-      <div class="grid grid-4col">
+      <div class="flexrow">
 
         {{!-- Spell Attributes --}}
-        <div class="flexcol flex-group-center box">
+        <div class="flexcol flexshrink flex-group-center item-attributes">
           <label class="resource-label">Range</label>
           <input type="text" name="system.range" value="{{system.range}}" />
           <label class="resource-label">Duration</label>
@@ -56,7 +56,7 @@
         </div>
 
         {{!-- Description --}}
-        <div class="flexcol grid-span-3">
+        <div class="flex item-description">
           {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
           {{editor system.description target="system.description" rollData=rollData button=true owner=owner editable=editable}}
         </div>
