--- a/templates/actor/parts/actor-abilities.hbs
+++ b/templates/actor/parts/actor-abilities.hbs
@@ -53,7 +53,7 @@
       <div class="item-header flexrow">
         <div class="item-name">
           <div class="item-image">
-            {{#if item.system.check}}
+            {{#if item.system.formula}}
             <a class="rollable" data-roll-type="item" data-label="{{item.name}} check"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
             {{else}}
             <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
@@ -62,8 +62,8 @@
           <a><h4 class="item-drop">{{item.name}}</h4></a>
         </div>
         <div class="item-prop">{{item.system.level}}</div>
-        <div class="item-prop">{{item.system.check}}</div>
-        <div class="item-prop">{{item.system.target}}</div>
+        <div class="item-prop">{{item.system.formula}}</div>
+        <div class="item-prop">{{item.system.tn}}</div>
         <div class="item-controls">
           <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
           <a class="item-control item-edit" title="{{localize 'HYP3E.item.edit'}}"><i class="fas fa-edit"></i></a>
