--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -15,7 +15,7 @@
       <div class="item-header flexrow">
         <div class="item-name">
           <div class="item-image">
-            {{#if item.system.check}}
+            {{#if item.system.formula}}
             <a class="rollable" data-roll-type="item" data-label="{{item.name}} check"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
             {{else}}
             <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
