--- a/templates/item/item-feature-sheet.hbs
+++ b/templates/item/item-feature-sheet.hbs
@@ -26,9 +26,9 @@
           <label class="resource-label">Level</label>
           <input type="text" name="system.level" value="{{system.level}}" data-dtype="String"/>
           <label class="resource-label">Check Roll</label>
-          <input type="text" name="system.check" value="{{system.check}}" data-dtype="String"/>
+          <input type="text" name="system.formula" value="{{system.formula}}" data-dtype="String"/>
           <label class="resource-label">Target</label>
-          <input type="text" name="system.target" value="{{system.target}}" data-dtype="String"/>
+          <input type="text" name="system.tn" value="{{system.tn}}" data-dtype="String"/>
           <label class="resource-label">Blind Roll</label>
           <select name="system.blindRoll">
             {{#select system.blindRoll}}
@@ -63,16 +63,10 @@
     <div class="tab attributes" data-group="primary" data-tab="attributes">
       {{!-- As you add new fields, add them in here! --}}
       <div class="resource">
-        <label class="resource-label">System Roll Formula</label>
-        <input type="text" name="system.formula" value="{{system.formula}}" data-dtype="String"/>
-        <label class="resource-label">Attack Roll Formula</label>
-        <input type="text" name="system.attack" value="{{system.attack}}" data-dtype="String"/>
-        <label class="resource-label">Damage Roll Formula</label>
-        <input type="text" name="system.damage" value="{{system.damage}}" data-dtype="String"/>
-        <label class="resource-label">Duration Formula</label>
-        <input type="text" name="system.duration" value="{{system.duration}}" data-dtype="String"/>
-        <label class="resource-label">Number Affected Formula</label>
-        <input type="text" name="system.affected" value="{{system.affected}}" data-dtype="String"/>
+        {{#if rollData.isGM}}
+        {{!-- <label class="resource-label">System Roll Formula</label>
+        <input type="text" name="system.formula" value="{{system.formula}}" disabled/> --}}
+        {{/if}}
         <label class="resource-label">Item ID</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
       </div>
