--- a/templates/item/item-sheet.hbs
+++ b/templates/item/item-sheet.hbs
@@ -25,8 +25,10 @@
     {{!-- Attributes Tab --}}
     <div class="tab attributes" data-group="primary" data-tab="attributes">
       {{!-- As you add new fields, add them in here! --}}
+      {{#if rollData.isGM}}
       <label class="resource-label">System Roll Formula</label>
-      <input type="text" name="system.formula" value="{{system.formula}}" data-dtype="String"/>
+      <input type="text" name="system.formula" value="{{system.formula}}" disabled/>
+      {{/if}}
       <label class="resource-label">Item ID</label>
       <input type="text" name="item._id" value="{{item._id}}" disabled/>
   </div>
