Cleanup chat message formatting and item names

--- a/templates/item/item-feature-sheet.hbs
+++ b/templates/item/item-feature-sheet.hbs
@@ -67,6 +67,8 @@
         {{!-- <label class="resource-label">System Roll Formula</label>
         <input type="text" name="system.formula" value="{{system.formula}}" disabled/> --}}
         {{/if}}
+        <label class="resource-label">Chatbox Name</label>
+        <input type="text" name="system.friendlyName" value="{{system.friendlyName}}" />
         <label class="resource-label">Item ID</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
       </div>
