--- a/templates/item/item-spell-sheet.hbs
+++ b/templates/item/item-spell-sheet.hbs
@@ -73,6 +73,8 @@
         <label class="resource-label">System Roll (Attack) Formula</label>
         <input type="text" name="system.formula" value="{{system.formula}}" />
         {{/if}}
+        <label class="resource-label">Chatbox Name</label>
+        <input type="text" name="system.friendlyName" value="{{system.friendlyName}}" />
         <label class="resource-label">Item ID</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
       </div>
